Fix fullalign image caption alignment

--- a/public/themes/custom/julkaisut/assets/styles/components/media.scss
+++ b/public/themes/custom/julkaisut/assets/styles/components/media.scss
@@ -12,5 +12,9 @@ figure.media {
     @include mq($from: large) {
       font-size: var(--fontsize-body-m);
     }
+
+    .wp-block-image.alignfull & {
+      transform: translateX(calc((var(--alignwide-width) - var(--content-width))/2 * -1));
+    }
   }
 }
